create alcune delle classi base (common & configuration) ma di molte manca l'implementazione

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -1,7 +1,15 @@
 
 SET (common_SRC
+# add here both your sources (cpp) and header (hpp) files
+EulerAngles.cpp
+EulerAngles.hpp
+Mesh.cpp
+Mesh.hpp
+Model3D.hpp
 Point3D.cpp
 Point3D.hpp
+Rototraslation.cpp
+Rototraslation.hpp
 )
 
 ADD_LIBRARY(common STATIC ${common_SRC})
