[cmake] aggiornati i lists.txt con le ultime modifiche ai file - implementate un po' di classi base (com'è bello rispolverare - maledendolo - il C++)

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -20,7 +20,7 @@ SET(CMAKE_VERBOSE_MAKEFILE ON)
 SET(CMAKE_BUILD_TYPE Debug)
 
 # Compiler Options
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 
 ##############
@@ -40,7 +40,8 @@ SET (MY_LIBS ${MY_LIBS} ${BOOST_LIBRARIES})
 # PROJECT SECTION
 #
 # include current directory in the inclusion directive
-SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
+#SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 
 SET(MY_SRCS
 main.cpp)
