--- a/source/configuration/CMakeLists.txt
+++ b/source/configuration/CMakeLists.txt
@@ -1,14 +1,13 @@
 
 SET (configuration_SRC
 # add here both your sources (cpp) and header (hpp) files
-CNCMove.cpp
-CNCMove.hpp
 CNCMoveIterator.cpp
 CNCMoveIterator.hpp
 ConfigurationManager.cpp
 ConfigurationManager.hpp
 CutterDescription.cpp
 CutterDescription.hpp
+Geometry.hpp
 StockDescriptor.cpp
 StockDescriptor.hpp
 )
