-ConfigurationManager: implementata la lettura di PRODUCT e TOOL - sistemazioni varie ed eventuali
[cmake]
- sistemazioni all'importazione delle librerie boost (ora worka)

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -28,11 +28,17 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 #
 # SOME PROJECT SPECIFIC LIBRARIES
 #
-FIND_LIBRARY(BOOST REQUIRED)
-INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
-LINK_DIRECTORIES(${BOOST_LIBRARY_DIRS})
-ADD_DEFINITIONS(${BOOST_DEFINITIONS})    
-SET (MY_LIBS ${MY_LIBS} ${BOOST_LIBRARIES})
+
+# BOOST
+
+SET(BOOST_MIN_VERSION "1.46.0")
+
+FIND_PACKAGE(Boost COMPONENTS regex REQUIRED)
+
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
+ADD_DEFINITIONS(${BoostT_DEFINITIONS})
+SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
 ###############
 
