- Utilities.[ch]pp: aggiunte una serie di classi con metodi statici per facilitare alcune operazioni - CNCMoveIterator: implementata la semantica dell'iteratore di POINTS attraverso i metodo CNCMoveBegin() e CNCMoveEnd() della classe ConfigurationManager
[cmake]
- aggiustamento con le modifiche ai file

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -40,6 +40,10 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${BoostT_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
+
+# output MY_LIBS definition
+MESSAGE(STATUS "*** MY_LIBS: ${MY_LIBS}")
+ 
 ###############
 
 #
