--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -3,6 +3,7 @@ SET (common_SRC
 # add here both your sources (cpp) and header (hpp) files
 Color.cpp
 Color.hpp
+constants.hpp
 EulerAngles.cpp
 EulerAngles.hpp
 Mesh.cpp
@@ -12,6 +13,8 @@ Point3D.cpp
 Point3D.hpp
 Rototraslation.cpp
 Rototraslation.hpp
+Utilities.cpp
+Utilities.hpp
 )
 
 ADD_LIBRARY(common STATIC ${common_SRC})
