[milling] - primo commit di un pezzo dell'algoritmo... pian piano ci arrivo! :) - il codice non è funzionante ma almeno compila (gcc)

--- a/source/configuration/CMakeLists.txt
+++ b/source/configuration/CMakeLists.txt
@@ -3,8 +3,10 @@ SET (configuration_SRC
 # add here both your sources (cpp) and header (hpp) files
 CNCMoveIterator.cpp
 CNCMoveIterator.hpp
-ConfigurationManager.cpp
-ConfigurationManager.hpp
+CommandLineParser.cpp
+CommandLineParser.hpp
+ConfigFileParser.cpp
+ConfigFileParser.hpp
 CutterDescription.cpp
 CutterDescription.hpp
 Geometry.hpp
