--- a/source/milling/CMakeLists.txt
+++ b/source/milling/CMakeLists.txt
@@ -1,7 +1,16 @@
 
 SET (milling_SRC
 # add here both your sources (cpp) and header (hpp) files
-
+Corner.hpp
+cutters.hpp
+MeshingInfo.hpp
+MillingAlgorithm.cpp
+MillingAlgorithm.hpp
+octree_nodes.hpp
+Octree.hpp
+SimpleBox.hpp
+Stock.cpp
+Stock.hpp
 )
 
 ADD_LIBRARY(milling STATIC ${milling_SRC})
