[milling] - continuazione implementazione algoritmo

--- a/source/milling/CMakeLists.txt
+++ b/source/milling/CMakeLists.txt
@@ -3,7 +3,6 @@ SET (milling_SRC
 # add here both your sources (cpp) and header (hpp) files
 Corner.hpp
 cutters.hpp
-MeshingInfo.hpp
 MillingAlgorithm.cpp
 MillingAlgorithm.hpp
 octree_nodes.hpp
@@ -11,6 +10,8 @@ Octree.hpp
 SimpleBox.hpp
 Stock.cpp
 Stock.hpp
+Voxel.hpp
+VoxelInfo.hpp
 )
 
 ADD_LIBRARY(milling STATIC ${milling_SRC})
