[milling] - inizio refactoring per passare a Eigen::Isometry3d al posto della coppia Matrix3d + Vector3d per rotazione + traslazione - introdotta la classe ShiftedBox che rappresenta una SimpleBox traslata. Estende SimpleBox usando la composizione e non l'ereditarietà in quanto verrà usata massicciamente anche dentro i nodi dell'octree e andando di composizione mi permette di risparmiare qualche byte di memoria (3 double = 24 byte contro i 4-8 byte a mantenere un puntatore)
[visualizer]
- creata l'impalcatura base delle classi per gestire i thread (milling, meshing & visualizer) e lo scambio di informazioni tra loro

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -33,17 +33,18 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ggdb")
 
 SET(BOOST_MIN_VERSION "1.46.0")
 
-FIND_PACKAGE(Boost COMPONENTS regex program_options chrono system REQUIRED)
+FIND_PACKAGE(Boost COMPONENTS regex program_options chrono system sygnals REQUIRED)
 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${BoostT_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
-
 # EIGEN
 INCLUDE_DIRECTORIES("/usr/include/eigen3")
 
+# MATH LIBRARY
+SET (MY_LIBS ${MY_LIBS} m)
 
 # output MY_LIBS definition
 MESSAGE(STATUS "*** MY_LIBS: ${MY_LIBS}")
