--- a/source/milling/CMakeLists.txt
+++ b/source/milling/CMakeLists.txt
@@ -5,13 +5,18 @@ Corner.hpp
 Cutter.cpp
 Cutter.hpp
 cutters.hpp
+MeshingInfo.cpp
+MeshingInfo.hpp
 MillingAlgorithm.cpp
 MillingAlgorithm.hpp
+MillingResult.hpp
 octree_nodes.hpp
 Octree.hpp
+ShiftedBox.hpp
 SimpleBox.hpp
 Stock.cpp
 Stock.hpp
+Voxel.cpp
 Voxel.hpp
 VoxelInfo.hpp
 )
