--- a/source/visualizer/CMakeLists.txt
+++ b/source/visualizer/CMakeLists.txt
@@ -1,7 +1,18 @@
 
 SET (visualizer_SRC
 # add here both your sources (cpp) and header (hpp) files
-
+CyclicRunnable.cpp
+CyclicRunnable.hpp
+MillerRunnable.cpp
+MillerRunnable.hpp
+MillingSignaler.cpp
+MillingSignaler.hpp
+Runnable.hpp
+SignaledInfo.hpp
+SteppableController.cpp
+SteppableController.hpp
+SteppableRunnable.cpp
+SteppableRunnable.hpp
 )
 
 ADD_LIBRARY(visualizer STATIC ${visualizer_SRC})
