THIS COMMIT DOES NOT COMPILE
[milling]
- cominciato il porting multithreaded dell'Octree

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 SET (common_SRC
 # add here both your sources (cpp) and header (hpp) files
+AtomicNumber.cpp
+AtomicNumber.hpp
 Color.cpp
 Color.hpp
 constants.hpp
