--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 # needed in order to use gdb within Eclipse
 SET(CMAKE_BUILD_TYPE Debug)
+#SET(CMAKE_BUILD_TYPE Release)
 
 # Compiler Options
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ggdb -O0")
