--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,9 +6,6 @@ PROJECT(edt-finalProject CXX)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
 
 # help Eclipse gcc error parsing disabling multi-line behaviour
-IF(CMAKE_COMPILER_IS_GNUCC)
-  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmessage-length=0")
-ENDIF(CMAKE_COMPILER_IS_GNUCC)
 IF(CMAKE_COMPILER_IS_GNUCXX)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmessage-length=0")
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
@@ -16,12 +13,8 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 # help Eclipse includes discovery from Makefile '-l' argument
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
-# needed in order to use gdb within Eclipse
-SET(CMAKE_BUILD_TYPE Debug)
-#SET(CMAKE_BUILD_TYPE Release)
-
 # Compiler Options
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ggdb -O0")
+SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -ggdb -O0")
 
 
 ##############
@@ -38,7 +31,7 @@ FIND_PACKAGE(Boost COMPONENTS regex program_options chrono system signals thread
 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-ADD_DEFINITIONS(${BoostT_DEFINITIONS})
+ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
 # EIGEN
