[milling] - modificato il sistema di sincronia dell'Octree: ora c'è un master lock sull'albero che deve venir acquisito da miller e mesher prima di cominciare a lavorare. Questa è una regressione rispetto a prima, ma sperabilmente l'analisi dell'albero da parte del mesher non dovrebbe impiegare troppo tempo (i nodi modificati verranno marcati come tali, quindi la ricerca è _aided_) + PtrVersioner: un parto, probabilmente non la useremo mai ma è la base di un sistema di sincronia che permette il lavoro contemporaneo di miller e mesher pur garantendo al mesher la visione di sole versioni consistenti [non testata]

--- a/.cproject
+++ b/.cproject
@@ -43,7 +43,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common/threading|threading" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Buildfiles|BuildRelease|profiling|source/common/threading|threading" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
