milling rewrite trying to speed it up

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -28,11 +28,16 @@ SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -ggdb -O0")
 SET(BOOST_MIN_VERSION "1.48.0")
 
 FIND_PACKAGE(Boost COMPONENTS regex program_options chrono system signals thread REQUIRED)
-
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
+
+FIND_PACKAGE( OpenSceneGraph )
+INCLUDE_DIRECTORIES(${OpenSceneGraph_INCLUDE_DIRS})
+LINK_DIRECTORIES(${OpenSceneGraph_LIBRARY_DIRS})
+ADD_DEFINITIONS(${OpenSceneGraph_DEFINITIONS})
+SET (MY_LIBS ${MY_LIBS} ${OpenSceneGraph_LIBRARIES})
 
 # EIGEN
 INCLUDE_DIRECTORIES("/usr/include/eigen3")
