SI VEDE CUBO E CUTTER CHE SI MUOVONO.... YEEEEEE!!! :D

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -33,11 +33,9 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
-FIND_PACKAGE( OpenSceneGraph )
-INCLUDE_DIRECTORIES(${OpenSceneGraph_INCLUDE_DIRS})
-LINK_DIRECTORIES(${OpenSceneGraph_LIBRARY_DIRS})
-ADD_DEFINITIONS(${OpenSceneGraph_DEFINITIONS})
-SET (MY_LIBS ${MY_LIBS} ${OpenSceneGraph_LIBRARIES})
+FIND_PACKAGE( OpenSceneGraph 3.0.0 REQUIRED osgUtil osgViewer osgGA )
+INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
+SET (MY_LIBS ${MY_LIBS} ${OPENSCENEGRAPH_LIBRARIES})
 
 # EIGEN
 INCLUDE_DIRECTORIES("/usr/include/eigen3")
