SI VEDONO I PEZZI SPARIREEEEE!!!!!! YEEEEE!! Estremamente inefficiente though...

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -33,7 +33,7 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
-FIND_PACKAGE( OpenSceneGraph 3.0.0 REQUIRED osgUtil osgViewer osgGA )
+FIND_PACKAGE( OpenSceneGraph 3.0.0 REQUIRED osgUtil osgText osgViewer osgGA )
 INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
 SET (MY_LIBS ${MY_LIBS} ${OPENSCENEGRAPH_LIBRARIES})
 
