--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -14,7 +14,7 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Compiler Options
-SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -ggdb -O0")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ggdb -O0 -losg -losgViewer -losgGA")
 
 
 ##############
@@ -39,6 +39,12 @@ SET (MY_LIBS ${MY_LIBS} ${OPENSCENEGRAPH_LIBRARIES})
 
 # EIGEN
 INCLUDE_DIRECTORIES("/usr/include/eigen3")
+
+# OSG
+INCLUDE_DIRECTORIES("usr/include/osg")
+INCLUDE_DIRECTORIES("usr/include/osgGA")
+INCLUDE_DIRECTORIES("usr/include/osgManipulator")
+INCLUDE_DIRECTORIES("usr/include/osgViewer")
 
 # MATH LIBRARY
 SET (MY_LIBS ${MY_LIBS} m)
