Corretto qualche errore di compilazione sotto windows

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -33,14 +33,19 @@ ENDIF()
 #
 
 # BOOST
+SET(Boost_USE_MULTITHREADED         ON)
+SET(Boost_USE_STATIC_LIBS       	OFF)
+SET(Boost_USE_STATIC_RUNTIME    	OFF)
+SET(Boost_ALL_DYN_LINK          	ON)
+SET(Boost_MIN_VERSION "1.48.0")
 
-SET(BOOST_MIN_VERSION "1.48.0")
-
-FIND_PACKAGE(Boost COMPONENTS regex program_options chrono system signals thread REQUIRED)
+FIND_PACKAGE(Boost REQUIRED COMPONENTS regex program_options chrono system signals thread)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
+
+#ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
+#ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
 
 FIND_PACKAGE( OpenSceneGraph 3.0.0 REQUIRED osgUtil osgText osgViewer osgGA )
 INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
@@ -55,9 +60,6 @@ ELSE()
     MESSAGE(WARNING "** Arch not supported **")
 ENDIF()
 
-
-# MATH LIBRARY
-SET (MY_LIBS ${MY_LIBS} m)
 
 # output MY_LIBS definition
 MESSAGE(STATUS "*** MY_LIBS: ${MY_LIBS}")
