minor minor changes

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -17,7 +17,7 @@ ENDIF()
 # help Eclipse includes discovery from Makefile '-l' argument
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
-# Compiler Options
+# Compiler Options in debug mode
 IF (${WIN32})
     SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -ggdb -O0")
 ELSEIF(${UNIX})
@@ -32,21 +32,22 @@ ENDIF()
 # SOME PROJECT SPECIFIC LIBRARIES
 #
 
-# BOOST
+# BOOST libraries
 SET(Boost_USE_MULTITHREADED         ON)
 SET(Boost_USE_STATIC_LIBS       	OFF)
 SET(Boost_USE_STATIC_RUNTIME    	OFF)
-SET(Boost_ALL_DYN_LINK          	ON)
-SET(Boost_MIN_VERSION "1.48.0")
+SET(Boost_MIN_VERSION               "1.48.0")
 
 FIND_PACKAGE(Boost REQUIRED COMPONENTS regex program_options chrono system signals thread)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 ADD_DEFINITIONS(${Boost_DEFINITIONS})
 SET (MY_LIBS ${MY_LIBS} ${Boost_LIBRARIES})
 
-#ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
-#ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
+ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
+ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
 
+
+# OpenSceneGraph
 FIND_PACKAGE( OpenSceneGraph 3.0.0 REQUIRED osgUtil osgText osgViewer osgGA )
 INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
 SET (MY_LIBS ${MY_LIBS} ${OPENSCENEGRAPH_LIBRARIES})
@@ -70,7 +71,6 @@ MESSAGE(STATUS "*** MY_LIBS: ${MY_LIBS}")
 # PROJECT SECTION
 #
 # include current directory in the inclusion directive
-#SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 
 SET(MY_SRCS
